Bug 328769 - libcdparanoia läßt sich nicht laden
Summary: libcdparanoia läßt sich nicht laden
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (show other bugs)
Version: 2.0.80
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Raphael Kubo da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-13 16:14 UTC by Reiner Funck
Modified: 2015-05-13 12:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Reiner Funck 2013-12-13 16:14:56 UTC
System Suse 13.1 nach den letzten Systemupdates
Die Funktion    Medium kopieren   liefert
- Audio CD wird kopiert
- Temporärer Ordner ....
- Kein CD Text ......
- CDDB Eintrag ....
- libcdparanoia läßt sich nicht laden
- Fehler beim Lesen von Sitzung 1

cdparanoia ist aber installiert!!!!
Der Fehler tritt auf  a l l e n  Rechnern auf


Reproducible: Always

Steps to Reproduce:
1. CD kopieren
2.
3.
Actual Results:  
libcdparanoia läßt sich nicht laden

Expected Results:  
CD Kopie
Comment 1 Burkhard Lück 2013-12-14 10:59:42 UTC
Please add version of kde / k3b in Suse 13.1
Comment 2 Christian Trippe 2013-12-27 13:08:24 UTC
This works fine for me with k3b 2.0.2 which is the standard for openSUSE 13.1. However I can reproduce the problem with k3b 2.0.80.git20131118-41.4 which is available from the KDE:Extra repository.
(I am using KDE SC 4.12 which is not the standard for openSUSE 13.1 but I do not think this matters for this bug.)
Comment 3 Johannes Obermayr 2014-01-04 16:08:14 UTC
As mentioned on
https://bugs.links2linux.org/browse/PM-95

the offender should be:
http://quickgit.kde.org/?p=k3b.git&a=commit&h=012de31
Comment 4 MaxiPunkt 2014-05-29 10:41:48 UTC
I do have Fedora FC20 on two computers.
I use a self-compiled k3b-version from GIT (ver: 2.0.80, hash: b0e04c0f).

While on computer-1 I could not reproducde this bug, I hit this bug on computer-2.
The only difference between the systems:
computer-1: cdparanoia-libs + cdparanoia-devel
computer-2: cdparanoia-libs only

Installing cdparanoia-devel on computer-2 solved the problem.

Strange thing about this bug is: k3b-binary is NOT linked against cdparanoia-libs, but obviously is trying to use it when copying an audio-cd.
It seems that there are routines inside k3b to search manually for the library, which fail if the devel-package is not present.

Does k3b search for cdparanoia-libs in wrong path?
Is there a good reason why the binary does not link directly against cdparanoia-libs?
For libdvdcss I would understand, but cdpraranoia should be legal for use, isn't it?

Any ideas how to fix this?
Comment 5 Johannes Obermayr 2014-08-04 17:21:44 UTC
Git commit e1a40d7dccf3c3ea9a03c9dc404c665a042889f4 by Johannes Obermayr.
Committed on 04/08/2014 at 16:36.
Pushed by jobermayr into branch 'master'.

Use setFileNameAndVersion to fix loading libraries on Linux.

Fixes: https://bugs.links2linux.org/browse/PM-95

M  +4    -4    libk3b/tools/k3bcdparanoialib.cpp
M  +1    -1    libk3b/tools/k3blibdvdcss.cpp

http://commits.kde.org/k3b/e1a40d7dccf3c3ea9a03c9dc404c665a042889f4
Comment 6 MaxiPunkt 2014-08-07 17:36:17 UTC
Now it works for me - thanks!

But k3b-binary still is NOT linked against cdparanoia-libs.
Why this currently is a runtime-dependency, only?
Comment 7 Johannes Obermayr 2014-08-07 17:56:30 UTC
We want to make distributions able to ship general support without the risk to get in trouble when shipping the codecs.
With a link-time dependency you cannot start k3b without codecs.
So the experienced user can pull the libraries elsewhere and use them without the need to recompile the binary.
Comment 8 Reiner Funck 2015-05-13 12:23:12 UTC
   Sehr geehrte Damen und Herren,
   leider hat mir der mail-Provider mitgeteilt, daß mein mail-Fach
   gehackt wurde. Da Sie wahrscheinlich dubiose mails von dieser
   Adresse erhalten, habe ich sie gelöscht.
   Neue Adresse: funck.r@t-online.de
   Mit freundlichen Grüßen
   Reiner Funck
   *Gesendet:* Samstag, 04. Januar 2014 um 18:08 Uhr
   *Von:* "Johannes Obermayr" <johannesobermayr@gmx.de>
   *An:* reiner.funck@web.de
   *Betreff:* [k3b] [Bug 328769] libcdparanoia läßt sich nicht ladenhttps://bugs.kde.org/show_bug.cgi?id=328769

   Johannes Obermayr <johannesobermayr@gmx.de> changed:

   What |Removed |Added
   ----------------------------------------------------------------------------
   CC| |johannesobermayr@gmx.de
   Version|unspecified |2.0.80
   Assignee|michalm@jabster.pl |rakuco@FreeBSD.org

   --- Comment #3 from Johannes Obermayr <johannesobermayr@gmx.de> ---
   As mentioned on
   https://bugs.links2linux.org/browse/PM-95

   the offender should be:
   http://quickgit.kde.org/?p=k3b.git&a=commit&h=012de31

   --
   You are receiving this mail because:
   You reported the bug.