Use setFileNameAndVersion to fix loading libraries on Linux.

Fixes: https://bugs.links2linux.org/browse/PM-95

BUG: 328769